Fixed the bug of modal image and thumbnail overflow

--- a/client/src/assets/styles/App.scss
+++ b/client/src/assets/styles/App.scss
@@ -138,6 +138,7 @@
 
 #eventlocalusers #friendrequest {
   background-color: #fdd76f;
+  height: 20px;
 }
 
 #eventlocalusers .btn {
